feat: Add wireframe toggle and enhance rendering options; improve depth handling in projections

--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@
             <h3>Visualização</h3>
             <div>
               <label>
+                <input type="checkbox" id="showWireframe" checked />
+                Mostrar Wireframe
+              </label>
+            </div>
+            <div>
+              <label>
                 <input type="checkbox" id="fillFaces" />
                 Preencher Faces
               </label>
@@ -227,6 +233,7 @@
           <div class="instruction-text">
             <h3>Visualização</h3>
             <ul>
+              <li>Ative/desative wireframe (linhas do modelo)</li>
               <li>Ative/desative preenchimento de faces</li>
               <li>Ative/desative iluminação</li>
               <li>Ative/desative remoção de faces ocultas</li>
