feat: Add light indicator toggle and enhance rendering options; refactor styles and remove unused code

--- a/index.html
+++ b/index.html
@@ -13,13 +13,6 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <style>
-      .solzinho {
-        position: absolute;
-        pointer-events: none;
-        z-index: 10;
-      }
-    </style>
   </head>
   <body>
     <div class="container">
@@ -94,6 +87,12 @@
               <label>
                 <input type="checkbox" id="enableLighting" />
                 Iluminação
+              </label>
+            </div>
+            <div>
+              <label>
+                <input type="checkbox" id="showLightIndicator" checked />
+                Mostrar Indicador de Luz (☀️)
               </label>
             </div>
             <div>
