--- a/index.html
+++ b/index.html
@@ -125,6 +125,21 @@
               <label>Cor do preenchimento:</label>
               <input type="color" id="faceColor" value="#b0b6de" />
             </div>
+            <div>
+              <label>Brilho especular (N):</label>
+              <input
+                type="number"
+                id="specularN"
+                value="32"
+                min="1"
+                max="256"
+                step="1"
+                style="width: 60px; margin-left: 5px"
+              />
+              <small style="color: #666; display: block; font-size: 11px">
+                Valores altos = brilho mais concentrado
+              </small>
+            </div>
             <div style="margin-top: 10px; font-size: 12px; color: #666">
               <b>Dica:</b>
               <br />• <b>Luz Segue Objeto:</b> A luz roda junto com o modelo
